[tool.poetry]
name = "onefish"
version = "0.1.0"
description = ""
authors = ["Eric Fish <eric.fish@envedabbio.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
gitfish = {git = "https://github.com/mrefish/gitfish.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
